# plex-discord-webhook

./: Cargo.toml  Readme.md
src/: main.rs  plex_webhook.rs
src/discord/: mod.rs  webhook.rs
src/plex/: mod.rs  models.rs  webhook.rs
