[package]
name = "plex-discord-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
hyper-tls = "*"
bytes = "1"

futures = "0.3.13"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.4", features = ["env-filter"] }
color-eyre = "0.5.11"
clap = { version = "3.0.13", features = ["env", "derive", "unicode", "wrap_help"] }
